--- a/src/app/layout/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/layout/components/breadcrumbs/breadcrumbs.component.html
@@ -1,7 +1,7 @@
 <!-- starts breadcrumbs -->
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="/landing-page">Courses</a></li>
+    <li class="breadcrumb-item"><a [routerLink]="['/landing-page']">Courses</a></li>
     <li class="breadcrumb-item active" aria-current="page" *ngIf="pageCurrent">{{ pageCurrent }}</li>
   </ol>
 </nav>
