--- a/src/app/courses/components/courses-list/courses-list-item/courses-list-item.component.html
+++ b/src/app/courses/components/courses-list/courses-list-item/courses-list-item.component.html
@@ -18,7 +18,7 @@
         <p>{{listItem.description}}</p>
       </div>
       <div class="col-md-2 col-sm-12">
-        <button class="btn btn-full" (click)="onDelete($event)"><i class="fa fa-trash" aria-hidden="true"></i>  Delete</button>
+        <button class="btn btn-full" (click)="onDelete(id)"><i class="fa fa-trash" aria-hidden="true"></i>  Delete</button>
       </div>
     </div>
   </div>
