--- a/src/app/courses/components/courses-list/courses-list.component.html
+++ b/src/app/courses/components/courses-list/courses-list.component.html
@@ -1,6 +1,6 @@
-<app-courses-list-item  *ngFor="let item of ListItems |  filter : searchText | orderBy: sortField: order"
+<app-courses-list-item  *ngFor="let item of ListItems | orderBy: sortField: order"
                         [listItem]="item"
-                        (deleteCourse)="onDelete($event)"
+                        (deleteCourse)="onDelete(item.id)"
                         (editCourse)="onEdit($event)"
                         (getbyId)="onGetCourseById($event)">
 
