updates for task 7

--- a/src/app/courses/components/courses-list/courses-list.component.html
+++ b/src/app/courses/components/courses-list/courses-list.component.html
@@ -1,7 +1,6 @@
 <app-courses-list-item  *ngFor="let item of ListItems | orderBy: sortField: order"
                         [listItem]="item"
                         (deleteCourse)="onDelete(item.id)"
-                        (editCourse)="onEdit($event)"
-                        (getbyId)="onGetCourseById($event)">
+                        (editCourse)="onEdit($event)">
 
 </app-courses-list-item>
