--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,9 +22,9 @@
                   <button class="btn btn-default" (click)="onLogin()">Login</button>
                   <div class="form-group">
                     <a [routerLink]="" (click)="onRetrieve()">Retrive</a><br>
-                    <a [routerLink]="" (click)="onGetUserInfo(login)">Retrive Login</a><br>
                     <a [routerLink]="" (click)="onLogout()">Wipes fake user info and token from local storage</a><br>
-                    <a [routerLink]="" (click)="isAuth()">Is auth</a>
+                    <a [routerLink]="" (click)="isAuth()">Is auth</a><br>
+                    <a [routerLink]="" (click)="onGetUserInfo()">User info</a>
                   </div>
                 </form>
               </div>
