--- a/src/app/courses/components/add-edit-page/add-edit-page.component.html
+++ b/src/app/courses/components/add-edit-page/add-edit-page.component.html
@@ -54,7 +54,7 @@
       <div class="row">
         <div class="col-md-10 offset-1">
           <div class="panel panel-default">
-            <div class="panel-heading">Add new course::</div>
+            <div class="panel-heading">Add new course:</div>
             <div class="panel-body">
               <form class="add-course-form">
                 <div class="form-group">
