--- a/src/app/courses/components/courses-page/courses-page.component.html
+++ b/src/app/courses/components/courses-page/courses-page.component.html
@@ -8,7 +8,8 @@
                         (editCourse)="onEditCourse($event)"
                         (getbyId)="onGetCourseById($event)">
       </app-courses-list>
-      <button class="btn btn-full btn-secondary" (click)="onLoad()"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE</button>
+      <button *ngIf='ListItems && ListItems.length >0 && ListItems && ListItems.length <= 10' class="btn btn-full btn-secondary" (click)="onLoadMore()"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE...</button>
+      <button *ngIf='ListItems.length > 10' class="btn btn-full btn-secondary" (click)="onLoadLess()"><i class="fa fa-download" aria-hidden="true"></i>  LOAD LESS</button>
   </div>
   <!-- ends course-list -->
 </div>
