--- a/src/app/courses/components/courses-list/courses-list.component.html
+++ b/src/app/courses/components/courses-list/courses-list.component.html
@@ -1,4 +1,4 @@
-<app-courses-list-item  *ngFor="let item of ListItems | orderBy: sortField: order"
+<app-courses-list-item  *ngFor="let item of ListItems"
                         [listItem]="item"
                         (deleteCourse)="onDelete(item.id)"
                         (editCourse)="onEdit($event)">
