--- a/src/app/courses/components/courses-page/courses-page.component.html
+++ b/src/app/courses/components/courses-page/courses-page.component.html
@@ -4,9 +4,7 @@
     <!-- starts course-list-item -->
     <div class="list">
       <app-courses-list [ListItems]="ListItems"
-                        (deleteCourse)="onDeleteCourse($event)"
-                        (editCourse)="onEditCourse($event)"
-                        (getbyId)="onGetCourseById($event)">
+                        (deleteCourse)="onDeleteCourse($event)">
       </app-courses-list>
       <button *ngIf='ListItems && ListItems.length >0 && ListItems && ListItems.length <= 10' class="btn btn-full btn-secondary" (click)="onLoadMore()"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE...</button>
       <button *ngIf='ListItems.length > 10' class="btn btn-full btn-secondary" (click)="onLoadLess()"><i class="fa fa-download" aria-hidden="true"></i>  LOAD LESS</button>
