--- a/src/app/courses/components/add-edit-page/add-edit-page.component.html
+++ b/src/app/courses/components/add-edit-page/add-edit-page.component.html
@@ -11,6 +11,10 @@
           <div class="panel panel-default">
             <div class="panel-heading">Edit course:</div>
             <div class="panel-body">
+              <!-- Можно попробовать использовать одну форму вмето двух с привязкой к listItem
+              В случае редактирования, заполнять listItem данными,
+              В случае добававления, создавать пустую модель и присваивать ее listItem
+              -->
               <form class="add-course-form">
                 <div class="form-group">
                   <label for="title">Title:</label>
