small fixes to the task

--- a/src/app/courses/components/add-edit-page/add-edit-page.component.html
+++ b/src/app/courses/components/add-edit-page/add-edit-page.component.html
@@ -1,4 +1,4 @@
-<!-- TODO: make one form from two -->
+<!-- TODO: combine into only one form -->
 <div class="outer">
   <div class="outer-inner">
     <div class="container" *ngIf="state">
