--- a/src/app/courses/components/courses-list/courses-list.component.html
+++ b/src/app/courses/components/courses-list/courses-list.component.html
@@ -1,3 +1,4 @@
+<!-- Нет в классе метода onEdit() -->
 <app-courses-list-item  *ngFor="let item of ListItems"
                         [listItem]="item"
                         (deleteCourse)="onDelete(item.id)"
