--- a/src/app/courses/components/add-edit-page/add-edit-page.component.html
+++ b/src/app/courses/components/add-edit-page/add-edit-page.component.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="btn-group">
                   <button class="btn btn-default" (click)="onSave($event)">Save</button>
-                  <button class="btn btn-secondary" routerLink="/landing-page">Cancel</button>
+                  <button class="btn btn-secondary" (click)="onCancel($event)">Cancel</button>
                 </div>
               </form>
             </div>
