--- a/src/app/courses/components/courses-page/courses-page.component.html
+++ b/src/app/courses/components/courses-page/courses-page.component.html
@@ -1,18 +1,19 @@
-<div *ngIf='ListItems && ListItems.length >0'>
+<div *ngIf='listItems && listItems.length >0'>
   <!-- starts course-list -->
   <div class="row">
     <!-- starts course-list-item -->
     <div class="list">
-      <app-courses-list [ListItems]="ListItems"
+      <app-courses-list [listItems]="listItems"
                         (deleteCourse)="onDeleteCourse($event)">
       </app-courses-list>
-      <button *ngIf='ListItems && ListItems.length >0 && ListItems && ListItems.length == 10' class="btn btn-full btn-secondary" (click)="onLoadMore()" [disabled]="isSearchAvailable"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE...{{this.nextPage}}</button>
-      <button *ngIf='ListItems.length <= 9' class="btn btn-full btn-secondary" (click)="onPrev()" [disabled]="isSearchAvailable"><i class="fa fa-download" aria-hidden="true"></i>  Return to the first page...</button>
+      <!-- TODO: создать метод в классе, а тут использовать его. -->
+      <button *ngIf='listItems && listItems.length >0 && listItems && listItems.length == 10' class="btn btn-full btn-secondary" (click)="onLoadMore()" [disabled]="isSearchAvailable"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE...{{this.nextPage}}</button>
+      <button *ngIf='listItems.length <= 9' class="btn btn-full btn-secondary" (click)="onPrev()" [disabled]="isSearchAvailable"><i class="fa fa-download" aria-hidden="true"></i>  Return to the first page...</button>
   </div>
   <!-- ends course-list -->
 </div>
 
-<div *ngIf='ListItems == undefined || ListItems.length == 0'>
+<div *ngIf='listItems == undefined || listItems.length == 0'>
   <div class="row">
     <div class="alert col-sm-12">NO DATA. FEEL FREE TO ADD A NEW COURSE</div>
   </div>
