--- a/src/app/layout/components/search/search.component.html
+++ b/src/app/layout/components/search/search.component.html
@@ -1,8 +1,10 @@
 <!-- starts search-->
 <form action="" class="form-search">
-  <input type="text" #searchText name="textInput" class="form-search__input" placeholder="Name, etc" >
-  <button class="btn btn-secondary" (click)="onSubmit(searchText.value)">
+  <input type="text" name="textInput" class="form-search__input"  (change)="onChange($event.target.value)" placeholder="Name, etc" >
+  <!--<button class="btn btn-secondary" (click)="onSubmit(searchText.value)">
     <i class="fa fa-search" aria-hidden="true"></i>
-    Search</button>
+    Search</button>-->
+  <!--(change)="onChange($event.target.value)"-->
+  <!--[formControl]="searchControl"-->
 </form>
 <!-- starts search -->
