--- a/src/app/layout/components/toolbox/toolbox.component.html
+++ b/src/app/layout/components/toolbox/toolbox.component.html
@@ -1,4 +1,4 @@
-<app-search (search)="onSearch($event)"></app-search>
+<app-search (searchText)="onSearchTextChanged($event)"></app-search>
 <div class="float-right">
   <button class="btn btn-secondary" routerLink="/add-page"><i class="fa fa-plus" aria-hidden="true"></i> Add course</button>
 </div>
