--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -16,7 +16,7 @@
       </div>
     </div>
     <app-courses-page [searchText]="searchText" [isSearchAvailable]="searchText?.length > 0"></app-courses-page>
-    <app-user *ngIf="IsAuth()"></app-user>
+    <app-user></app-user>
   </main>
 </div>
 <footer class="footer">
