--- a/src/app/layout/components/user-log-in/user-log-in.component.html
+++ b/src/app/layout/components/user-log-in/user-log-in.component.html
@@ -1,1 +1,1 @@
-<a [routerLink]="" (click)="onLogin()" class="login">User Log-in {{this.a}}</a>
+<a [routerLink]="" (click)="onLogin()" class="login">{{this.user}}</a>
