--- a/src/app/users/components/user-entity/user-entity.component.html
+++ b/src/app/users/components/user-entity/user-entity.component.html
@@ -2,6 +2,8 @@
   <td>{{userItem.id}}</td>
   <td>{{userItem.firstName}}</td>
   <td>{{userItem.lastName}}</td>
-  <td>{{userItem.email}}</td>
+  <td>{{userItem.login}}</td>
+  <td>{{userItem.password}}</td>
+  <td>{{userItem.tokenKey}}</td>
 </tr>
 
