--- a/src/app/users/components/user.component.html
+++ b/src/app/users/components/user.component.html
@@ -1,7 +1,8 @@
 <div class="row">
   <div class="col-sm-12">
     <table>
-        <app-user-entity *ngFor="let item of UserItems" [userItem]="item"></app-user-entity>
+        <app-user-entity *ngFor="let item of userItems" [userItem]="item"></app-user-entity>
+        <button class="btn" (click)="onCheckCurrentUser()">Get User by Id</button>
     </table>
   </div>
 </div>
