fixes for login form

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -20,6 +20,6 @@
   </main>
 </div>
 <footer class="footer">
-  <app-footer></app-footer>
+  <app-footer *ngIf="IsAuth()"></app-footer>
 </footer>
 <!--ends  markup -->
