--- a/src/app/layout/components/user-log-in/user-log-in.component.html
+++ b/src/app/layout/components/user-log-in/user-log-in.component.html
@@ -1,1 +1,2 @@
-<a [routerLink]="" (click)="onLogin()" class="login">{{this.login}}</a>
+<span>You logged in <em>{{login | async}}!</em></span>&nbsp;&nbsp;
+<button class="btn btn-secondary" (click)="onLogout()" ><i class="fa fa-sign-out" aria-hidden="true"></i>  Logout</button>
