--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -13,15 +13,20 @@
               </div>
               <form class="login-form">
                 <div class="form-group">
-                  <label for="email">Email:</label>
-                  <input type="email" class="form-control" id="email" name="email" [(ngModel)]="login">
+                  <label for="login">Email:</label>
+                  <input type="login" class="form-control" id="login" name="login" [(ngModel)]="user.login">
                 </div>
                 <div class="form-group">
                   <label for="password">Password:</label>
-                  <input type="password" class="form-control" id="password" name="password" [(ngModel)]="password">
+                  <input type="password" class="form-control" id="password" name="password" [(ngModel)]="user.password">
                 </div>
-                <button class="btn btn-default" (click)="onSignUp()">Login</button>
+                <button class="btn btn-default" (click)="onSignUp()">Sign-up</button>
               </form>
+              <div *ngIf="errorMessage">
+                <div class="alert alert-danger" role="alert">
+                  {{errorMessage}}
+                </div>
+              </div>
             </div>
           </div>
         </div>
