--- a/src/app/courses/components/add-edit-page/add-edit-page.component.html
+++ b/src/app/courses/components/add-edit-page/add-edit-page.component.html
@@ -63,6 +63,7 @@
                   <input type="text" class="form-control" id="title1" name="title1"  formControlName="title"  [ngClass]="{ 'is-invalid': submitted && f.title.errors }" >
                   <div *ngIf="submitted && f.title.errors" class="invalid-feedback">
                     <div *ngIf="f.title.errors.required">Name of course is required</div>
+                    <div *ngIf="f.title.errors.maxlength">Name of course must be no more than 10 characters</div>
                   </div>
                 </div>
                 <div class="form-group">
@@ -70,27 +71,33 @@
                   <textarea class="form-control" id="description" name="description" rows="4" cols="50"  formControlName="description" [ngClass]="{ 'is-invalid': submitted && f.description.errors }" ></textarea>
                   <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
                     <div *ngIf="f.description.errors.required">Description is required</div>
+                    <div *ngIf="f.description.errors.maxlength">Descriptione must be no more than 10 characters</div>
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="date1">Date:</label>
-                  <input type="text" class="form-control date" id="date1" name="date1"  formControlName="createDate">
+                  <label for="description">Date:</label>
+                <app-date-control  class="form-control date" formControlName="createDate" [ngClass]="{ 'is-invalid': submitted && f.createDate.errors }" datevalidator></app-date-control>
                   <div *ngIf="submitted && f.createDate.errors" class="invalid-feedback">
                     <div *ngIf="f.createDate.errors.required">Date is required</div>
+                    <div *ngIf="f.createDate.errors.datevalidator">Please provide a valid date format</div>
                   </div>
                 </div>
+
                 <div class="form-group">
                   <label for="duration1">Duration:</label>
-                  <input type="text" class="form-control duration" id="duration1" name="duration1" formControlName="duration">
+                  <input type="text" class="form-control duration" id="duration1" name="duration1" formControlName="duration" [ngClass]="{ 'is-invalid': submitted && f.duration.errors }">
                   <span class="time">{{newItem.duration  | myTime}}</span>
                   <div *ngIf="submitted && f.duration.errors" class="invalid-feedback">
                     <div *ngIf="f.duration.errors.required">Duration is required</div>
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="author1">Authors:</label>
-                  <select class="form-control" id="author1" name="author1">
+                  <label for="author">Authors:</label>
+                  <!--<select class="form-control" id="author1" name="author1">
                     <option>{{newItem.authors[0]}}</option>
+                  </select>-->
+                  <select class="form-control" [(ngModel)]="selectedAuthor" (ngModelChange)="onChange($event)" >
+                    <option *ngFor="let author of authors" [ngValue]="author"> {{author.name}} </option>
                   </select>
                 </div>
                 <div class="btn-group">
@@ -109,4 +116,5 @@
         {{errorMessage}}
       </div>
   </div>
+</div>
 </div>
