--- a/src/app/courses/components/date-control/date-control.component.html
+++ b/src/app/courses/components/date-control/date-control.component.html
@@ -1,3 +1,3 @@
-<p>
-  date-control works!
-</p>
+<input type="text" class="input-hidden" id="createDate" name="createDate" (change)="pushChanges($event.target.value)">
+
+
