--- a/src/styles.css
+++ b/src/styles.css
@@ -252,6 +252,16 @@ footer{
   text-decoration: none;
 }
 
+.input-hidden {
+  border: none;
+  background: none;
+  padding: 0;
+  margin: 0;
+  outline: none;
+  width: 100%;
+  height: 100%;
+}
+
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
   .float-right {
