--- a/src/app/courses/components/add-edit-page/add-edit-page.component.html
+++ b/src/app/courses/components/add-edit-page/add-edit-page.component.html
@@ -96,9 +96,9 @@
                   <!--<select class="form-control" id="author1" name="author1">
                     <option>{{newItem.authors[0]}}</option>
                   </select>-->
-                  <select class="form-control" [(ngModel)]="selectedAuthor" (ngModelChange)="onChange($event)" >
+                  <!--<select class="form-control" [(ngModel)]="selectedAuthor" (ngModelChange)="onChange($event)" >
                     <option *ngFor="let author of authors" [ngValue]="author"> {{author.name}} </option>
-                  </select>
+                  </select>-->
                  <!-- <tags-input class="form-control input-lg" (onTagsChanged)="onTagsChanged($event)" [removeLastOnBackspace]="removeLastOnBackspace" [(ngModel)]="tags" name="tags"></tags-input>-->
                   <!-- <tag-input [ngModel]="items"
                              [theme]="'foundation-theme'">
