--- a/src/app/courses/components/add-edit-page/add-edit-page.component.html
+++ b/src/app/courses/components/add-edit-page/add-edit-page.component.html
@@ -59,8 +59,8 @@
             <div class="panel-body">
               <form class="add-course-form" [formGroup]="addCourseForm" (ngSubmit)="onSave()">
                 <div class="form-group">
-                  <label for="title1">Title:</label>
-                  <input type="text" class="form-control" id="title1" name="title1"  formControlName="title"  [ngClass]="{ 'is-invalid': submitted && f.title.errors }" >
+                  <label for="title">Title:</label>
+                  <input type="text" class="form-control" id="title" name="title" formControlName="title"  [ngClass]="{ 'is-invalid': submitted && f.title.errors }" >
                   <div *ngIf="submitted && f.title.errors" class="invalid-feedback">
                     <div *ngIf="f.title.errors.required">Name of course is required</div>
                     <div *ngIf="f.title.errors.maxlength">Name of course must be no more than 10 characters</div>
@@ -76,19 +76,21 @@
                 </div>
                 <div class="form-group">
                   <label for="description">Date:</label>
-                <app-date-control  class="form-control date" formControlName="createDate" [ngClass]="{ 'is-invalid': submitted && f.createDate.errors }" datevalidator></app-date-control>
+                  <app-date-control  class="form-control date" formControlName="createDate" [ngClass]="{ 'is-invalid': submitted && f.createDate.errors }" datevalidator></app-date-control>
                   <div *ngIf="submitted && f.createDate.errors" class="invalid-feedback">
                     <div *ngIf="f.createDate.errors.required">Date is required</div>
                     <div *ngIf="f.createDate.errors.datevalidator">Please provide a valid date format</div>
                   </div>
                 </div>
-
                 <div class="form-group">
-                  <label for="duration1">Duration:</label>
-                  <input type="text" class="form-control duration" id="duration1" name="duration1" formControlName="duration" [ngClass]="{ 'is-invalid': submitted && f.duration.errors }">
-                  <span class="time">{{newItem.duration  | myTime}}</span>
+                  <label for="duration">Duration:</label>
+                  <!--<input type="text" class="form-control duration" id="duration1" name="duration1" formControlName="duration" [ngClass]="{ 'is-invalid': submitted && f.duration.errors }">
+                  <span class="time">{{newItem.duration  | myTime}}</span>-->
+                  <app-time-control class="form-control duration" formControlName="duration" [ngClass]="{ 'is-invalid': submitted && f.duration.errors }" numbersonly></app-time-control>
+                  <span class="time">{{addCourseForm.get("duration").value | myTime}}</span>
                   <div *ngIf="submitted && f.duration.errors" class="invalid-feedback">
                     <div *ngIf="f.duration.errors.required">Duration is required</div>
+                    <div *ngIf="f.duration.errors.numbersonly">Only number formatt is allowed</div>
                   </div>
                 </div>
                 <div class="form-group">
@@ -96,13 +98,40 @@
                   <!--<select class="form-control" id="author1" name="author1">
                     <option>{{newItem.authors[0]}}</option>
                   </select>-->
-                  <!--<select class="form-control" [(ngModel)]="selectedAuthor" (ngModelChange)="onChange($event)" >
-                    <option *ngFor="let author of authors" [ngValue]="author"> {{author.name}} </option>
-                  </select>-->
-                 <!-- <tags-input class="form-control input-lg" (onTagsChanged)="onTagsChanged($event)" [removeLastOnBackspace]="removeLastOnBackspace" [(ngModel)]="tags" name="tags"></tags-input>-->
-                  <!-- <tag-input [ngModel]="items"
-                             [theme]="'foundation-theme'">
-                  </tag-input>-->
+                 <!-- <select class="form-control" formControlName="authors" (ngModelChange)="onChange($event)"  [ngClass]="{ 'is-invalid': submitted && f.authors.errors }" >
+                    <option *ngFor="let author of authors" [ngValue]="author.id"> {{author.name}} </option>
+                  </select>
+                  <div *ngIf="submitted && f.createDate.errors" class="invalid-feedback">
+                    <div *ngIf="f.authors.errors.required">At least one author is required</div>
+                  </div>-->
+                  <mat-form-field class="form-control"  aria-orientation="horizontal" [ngClass]="{ 'is-invalid': submitted && f.authors.errors }" >
+                    <mat-chip-list #list>
+                      <mat-chip *ngFor="let option of selectedAuthors"
+                                [selectable]="selectable"
+                                [removable]="removable"
+                                (removed)="remove(option)">
+                        {{option.name}}
+                        <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                      </mat-chip>
+                    <input  formControlName="authors"
+                            placeholder="please chose an athour..."
+                            [matChipInputFor]="list"
+                            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                            [matChipInputAddOnBlur]="addOnBlur"
+                            (matChipInputTokenEnd)="add($event)"
+                            [matAutocomplete]="auto"
+                             matInput>
+                    <mat-autocomplete #auto="matAutocomplete" (optionSelected)="addSelect($event)">
+                      <mat-option *ngFor="let author of authors" [value]="author">
+                        {{ author.name }}
+                      </mat-option>
+                    </mat-autocomplete>
+                    </mat-chip-list>
+                    <mat-hint align="end">Press comma or enter after each selection</mat-hint>
+                  </mat-form-field>
+                  <div *ngIf="submitted && f.authors.errors" class="invalid-feedback">
+                    <div *ngIf="f.authors.errors.required">At least one author is required</div>
+                  </div>
                 </div>
                 <div class="btn-group">
                   <button class="btn btn-default" type="submit">Create</button>
