--- a/src/app/courses/components/time-control/time-control.component.html
+++ b/src/app/courses/components/time-control/time-control.component.html
@@ -1,3 +1,1 @@
-<p>
-  time-control works!
-</p>
+<input type="text" class="input-hidden" id="duration" name="duration" (change)="pushChanges($event.target.value)">
